<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="vertical"
    tools:context=".Layout.GridLayout">
    <TextView
        android:id="@+id/txt_one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:background="@color/colorOrangred"
        android:text="@string/one"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:text="@string/two"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txt_three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:text="@string/three"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/txt_four"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorRed"
        android:gravity="center"
        android:text="@string/four"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />
</GridLayout>