<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"

    tools:context=".Layout.LinearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<!--horizontal-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorOrangred"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

        </LinearLayout>
<!--vertical-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="4">
            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorOrangred"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@color/colorRed"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>